crates/eden-model/tests/snapshots/mc_block_pos_serialization.snap
---
source: crates/eden-model/src/minecraft/block_pos.rs
expression: "&pos"
input_file: crates/eden-model/tests/snapshots
---
[
  0,
  0,
  0
]
