crates/eden-model/tests/snapshots/should_find_linked_mc_account_view_by_mc_uuid.snap
---
source: crates/eden-model/src/tables/linked_mc_account_view.rs
expression: view
input_file: crates/eden-model/tests/snapshots
---
LinkedMcAccountView {
    member: MemberView {
        discord_user_id: Id(12345),
        joined_at: Timestamp(
            1970-01-15T06:56:07Z,
        ),
        name: "john",
        flags: MemberFlags(
            0x0,
        ),
        inviter: None,
    },
    uuid: 00000000-0000-0000-0000-000000000000,
    linked_at: Timestamp(
        1970-01-15T06:56:07Z,
    ),
    username: "john1",
    edition: Java,
    last_login_at: None,
}
