crates/eden-model/tests/snapshots/should_find_member.snap
---
source: crates/eden-database/src/model/member_view.rs
expression: member
input_file: crates/eden-database/tests/snapshots
---
MemberView {
    discord_user_id: Id(12345),
    joined_at: Timestamp(
        1970-01-02T10:17:36Z,
    ),
    name: "john",
    flags: MemberFlags(
        0x0,
    ),
    inviter: None,
}
