crates/eden-model/tests/snapshots/should_include_an_inviter.snap
---
source: crates/eden-database/src/model/member_view.rs
expression: view
input_file: crates/eden-database/tests/snapshots
---
MemberView {
    discord_user_id: Id(12346),
    joined_at: Timestamp(
        1970-01-02T10:17:36Z,
    ),
    name: "bob",
    flags: MemberFlags(
        0x0,
    ),
    inviter: Some(
        Inviter {
            discord_user_id: Id(12345),
            name: "alice",
            flags: MemberFlags(
                0x0,
            ),
        },
    ),
}
