crates/eden-model/tests/snapshots/should_insert_mc_login_event_from_guest.snap
---
source: crates/eden-database/src/model/mc_login_event.rs
expression: event
input_file: crates/eden-database/tests/snapshots
---
McLoginEvent {
    id: 00000000-0000-0000-0000-000000000000,
    player_uuid: e8b6254a-f39b-4a68-9744-708fd82eef54,
    created_at: Timestamp(
        1970-01-02T10:17:36Z,
    ),
    ip_address: 127.0.0.1,
    username: None,
    edition: Bedrock,
    member_id: None,
}
